feature: contacts in users service
